Theme the reminder email for MoneyHelper

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -49,14 +49,14 @@
         }
 
         h1, h2, h3, h4, h5, h6, p {
-            color: #0B0C0C;
-            font-family: Helvetica, Arial, sans-serif;
-            margin: 15px 0;
+          color: #0F19A0;
+          font-family: Calibri, Arial, sans-serif;
+          margin: 15px 0;
         }
 
         ul, ol  {
             color: #0B0C0C;
-            font-family: Helvetica, Arial, sans-serif;
+            font-family: Calibri, Arial, sans-serif;
             margin-top: 15px;
             margin-bottom: 15px;
         }
@@ -122,7 +122,7 @@
 
         /* Styling your links has become much simpler with the new Yahoo.  In fact, it falls in line with the main credo of styling in email and make sure to bring your styles inline.  Your link colors will be uniform across clients when brought inline.
         Bring inline: Yes. */
-        a {color: #005EA5;}
+        a {color: #C82A87;}
 
 
         /***************************************************
