--- a/app/views/shared/email/_money_helper.html.erb
+++ b/app/views/shared/email/_money_helper.html.erb
@@ -1,7 +1,25 @@
-<h2 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
-  We’re moving to MoneyHelper
+<h2 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+  What’s MoneyHelper?
 </h2>
 
 <%= p do %>
-  The Pension Wise service will soon be part of MoneyHelper, the easy way to get free help for your money and pensions.
+  MoneyHelper is a government backed organisation that provides free and
+  impartial guidance on your money and pensions. Further information can be
+  found at <a href="https://www.moneyhelper.org.uk/about-us">moneyhelper.org.uk/about-us</a>.
+<% end %>
+
+<% if defined?(full_detail) %>
+  <%= p do %>
+    MoneyHelper collects and stores personal data for the purpose of delivering
+    pensions guidance. Your data will be shared with our delivery partners only
+    where it is necessary to provide you with Pension Wise guidance. Full details
+    of our privacy policy, including information on your rights in relation to the
+    data we hold can be found at <a href="https://www.moneyhelper.org.uk/privacy">moneyhelper.org.uk/privacy</a>.
+    Alternatively, please write to Pension Wise, P.O. Box 10404, LE65 9EH.
+  <% end %>
+<% else %>
+  <%= p do %>
+    Full details of our privacy policy, including information on your rights in
+    relation to the data we hold can be found at <a href="https://www.moneyhelper.org.uk/privacy">moneyhelper.org.uk/privacy</a>.
+  <% end %>
 <% end %>
