--- a/app/views/shared/email/_preparing_for_appointment.text.erb
+++ b/app/views/shared/email/_preparing_for_appointment.text.erb
@@ -17,7 +17,7 @@ Think about your financial circumstances in general and plans for retirement, eg
 
 Pension scams
 
-Pension scams are on the increase in the UK. A lifetime’s savings can be lost in moments. More information on scams can be found at https://www.pensionwise.gov.uk/en/scams
+Pension scams are on the increase in the UK. A lifetime’s savings can be lost in moments. More information on scams can be found at https://www.moneyhelper.org.uk/scams
 
 Coronavirus (COVID-19)
 
