--- a/app/views/shared/email/_preparing_for_appointment.html.erb
+++ b/app/views/shared/email/_preparing_for_appointment.html.erb
@@ -1,4 +1,4 @@
-<h2 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 18px;line-height: 1.111111111;padding: 15px 0;">
+<h2 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 18px;line-height: 1.111111111;padding: 15px 0;">
   Preparing for your appointment
 </h2>
 
@@ -6,7 +6,7 @@
   To make the most of your appointment it would be helpful if you know:
 <% end %>
 
-<ul style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
+<ul style="color: #0B0C0C;font-family: Calibri, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
   <li>
     <%= p do %>
       what type(s) of pension you have? – ask your pension provider whether you have a defined contribution or a defined benefit pension if you are unsure
@@ -19,7 +19,7 @@
   </li>
   <li>
     <%= p do %>
-      an estimate of your State Pension — call the Future Pension Centre on 0800 731 0175 or <a href="https://www.gov.uk/check-state-pension">use the online service</a> for a State Pension statement
+      an estimate of your State Pension — call the Future Pension Centre on <strong>0800 731 0175</strong> or <a href="https://www.gov.uk/check-state-pension">use the online service</a> for a State Pension statement
     <% end %>
   </li>
   <li>
@@ -33,7 +33,7 @@
   Think about your financial circumstances in general and plans for retirement, eg:
 <% end %>
 
-<ul style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
+<ul style="color: #0B0C0C;font-family: Calibri, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
   <li>
     <%= p do %>
       sources of income like salary, state benefits, savings and investments
@@ -56,31 +56,12 @@
   </li>
 </ul>
 
-<h2 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 18px;line-height: 1.111111111;padding: 15px 0;">
+<h2 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 18px;line-height: 1.111111111;padding: 15px 0;">
   Pension scams
 </h2>
 
 <%= p do %>
   Pension scams are on the increase in the UK. A lifetime’s savings can be lost
   in moments. More information on scams can be found at
-  <a href="https://www.pensionwise.gov.uk/en/scams">www.pensionwise.gov.uk/en/scams</a>.
-<% end %>
-
-<h2 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 18px;line-height: 1.111111111;padding: 15px 0;">
-  Coronavirus (COVID-19)
-</h2>
-
-<%= p do %>
-  Coronavirus (COVID-19) is a new illness that can affect your lungs and airways. If you think you might have coronavirus or you've been in close contact with someone who has it:
-<% end %>
-
-<ul style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
-  <li>stay at home and avoid close contact with other people</li>
-  <li>do not go to a GP surgery, pharmacy or hospital</li>
-  <li>use the <a href="https://111.nhs.uk/covid-19">NHS 111 online coronavirus service</a> to find out what to do next. The 111 coronavirus service will tell you if you need to continue to stay at home (self-isolate) or if you need medical help</li>
-  <li>if you've recently travelled abroad, see the <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/">coronavirus advice for travellers</a></li>
-</ul>
-
-<%= p do %>
-  Further information is available at <a href="https://nhs.uk/coronavirus">nhs.uk/coronavirus</a>.
+  <a href="https://www.moneyhelper.org.uk/scams">moneyhelper.org.uk/scams</a>.
 <% end %>
