--- a/app/views/appointment_mailer/updated.text.erb
+++ b/app/views/appointment_mailer/updated.text.erb
@@ -6,7 +6,5 @@ Your appointment details have been updated.
 
 <%= render 'shared/email/appointment_details' %>
 
-Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
-
-<%= render 'shared/email/money_helper' %>
 <%= render 'shared/email/preparing_for_appointment' %>
+<%= render 'shared/email/money_helper', full_detail: true %>
