Theme missed email

--- a/app/views/appointment_mailer/missed.html.erb
+++ b/app/views/appointment_mailer/missed.html.erb
@@ -1,4 +1,4 @@
-<h1 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+<h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
   Missed appointment
 </h1>
 
@@ -43,11 +43,7 @@
 <% end %>
 
 <%= p do %>
-  To book another appointment, please call 0800 138 3944. Please don’t reply to this email.
-<% end %>
-
-<%= p do %>
-  Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at <a href="https://www.pensionwise.gov.uk/en/privacy/">https://www.pensionwise.gov.uk/en/privacy</a>.
+  To book another appointment, please call <strong>0800 138 3944</strong>. Please don’t reply to this email.
 <% end %>
 
 <%= render 'shared/email/money_helper' %>
