Theme resource manager notifications

--- a/app/views/appointment_mailer/adjustment.html.erb
+++ b/app/views/appointment_mailer/adjustment.html.erb
@@ -1,11 +1,11 @@
 <% if @appointment.accessibility_requirements? %>
-  <h1 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+  <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
     The customer has indicated they require help or an accessibility adjustment to access their appointment
   </h1>
 <% end %>
 
 <% if @appointment.third_party_booking? %>
-  <h1 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+  <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
     The customer has indicated they are attending an appointment on behalf of an individual
   </h1>
 <% end %>
