--- a/app/views/consents/create.html.erb
+++ b/app/views/consents/create.html.erb
@@ -64,7 +64,7 @@ consent before the appointment by contacting Pension Wise.
 <p>
 By signing this form, you are giving us consent to collect, store, and use your
 personal data for the purposes outlined in our privacy policy
-www.pensionwise.gov.uk/en/privacy
+moneyhelper.org.uk/privacy
 </p>
 
 <p>
@@ -75,5 +75,5 @@ Protection Act 2018.
 <p>
 Please return the completed form to Pension Wise, PO Box 10404, Ashby de la
 Zouch, Leicestershire, LE65 9EH. Or you can email a scanned copy
-to: contact@pensionwise.gov.uk
+to: contact.pensionwise@moneyhelper.org.uk
 </p>
