--- a/app/views/appointment_mailer/consent_form.html.erb
+++ b/app/views/appointment_mailer/consent_form.html.erb
@@ -29,5 +29,5 @@
 
 <%= p do %>
   If you did not ask a third party to discuss your pension options with Pension
-  Wise email contact.pensionwise@moneyhelper.org.uk
+  Wise email <a href="contact.pensionwise@moneyhelper.org.uk">contact.pensionwise@moneyhelper.org.uk</a>.
 <% end %>
