--- a/app/views/appointment_mailer/consent_form.text.erb
+++ b/app/views/appointment_mailer/consent_form.text.erb
@@ -9,7 +9,7 @@ appointment to them on your behalf.
 Please complete the third party consent form and follow the return
 instructions:
 
-<%= link_to 'Download the consent form', appointment_consent_url(@appointment) %>
+<%= appointment_consent_url(@appointment) %>
 
 If you did not ask a third party to discuss your pension options with Pension
 Wise email contact.pensionwise@moneyhelper.org.uk.
