Update MH modal copy

--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -101,11 +101,11 @@
         </div>
         <div class="modal-body">
           <p>
-            Thank you for calling Pension Wise today. I just want to let you
-            know that from early June the Pension Wise service will continue as a
-            named service from MoneyHelper. We’re doing this to bring all
-            our money and pension guidance together in one place to make it
-            easier for you to access.
+            Is there anything else I can help you with today? Before you go,
+            just to let you know that MoneyHelper is here to help with all your
+            pension and money choices. As I mentioned earlier, our guidance is
+            now all in one place for ease of use, so feel free to get back in
+            touch or search for MoneyHelper online any time if you need us.
           </p>
           <p>
             FAQs: <a href="https://www.maps.org.uk/moneyhelper/">www.maps.org.uk/moneyhelper</a>
