Update email wording
This is to attempt to discourage customers from sending email requests
for these particular tasks.

--- a/app/views/shared/email/_appointment_details.html.erb
+++ b/app/views/shared/email/_appointment_details.html.erb
@@ -74,6 +74,6 @@
   <% end %>
 
   <%= p do %>
-    Call <strong>0800 138 3944</strong> or email us to change or cancel your booking
+    Call <strong>0800 138 3944</strong> to change or cancel your booking.
   <% end %>
 <% end %>
