--- a/app/views/shared/email/_appointment_details.text.erb
+++ b/app/views/shared/email/_appointment_details.text.erb
@@ -29,5 +29,5 @@ A trained guidance specialist will call you on the number above. They'll repeat 
 
 If you miss the call, you'll need to book another appointment.
 
-Call 0800 138 3944 or email us to change or cancel your booking.
+Call 0800 138 3944 to change or cancel your booking.
 <% end %>
