Temporary hack to enable rebooks from here

--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -77,7 +77,7 @@
               <span class="sr-only">Reschedule appointment</span>
             <% end %>
           <% end %>
-          <%= link_to new_appointment_path(copy_from: result), title: 'Rebook appointment', class: 'btn btn-info t-rebook' do %>
+          <%= link_to new_appointment_path(copy_from: result, schedule_type: result.schedule_type), title: 'Rebook appointment', class: 'btn btn-info t-rebook' do %>
             <span class="glyphicon glyphicon-repeat" aria-hidden="true"></span>
             <span class="sr-only">Rebook appointment</span>
           <% end %>
