--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -60,7 +60,7 @@
     <% @results.each do |result| %>
       <% result = AppointmentSearchResultPresenter.new(result) %>
       <tr class="appointment-search-results__row t-result">
-        <td class="appointment-search-results__item"><b class="visible-xs-block">Reference</b><span class="id js-allow-highlighting t-id">#<%= result.id %></span></td>
+        <td class="appointment-search-results__item"><b class="visible-xs-block">Reference</b><span class="id js-allow-highlighting t-id">#<%= result.id %></span><% if result.due_diligence? %> <small>(DD)</small><% end %></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Customer</b><span class="js-allow-highlighting t-name"><%= result.name %></span></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Guider</b><span class="js-allow-highlighting"><%= result.guider_name %></span> <small>(<%= result.guider_organisation %>)</small></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Appointment Date/Time</b><%= result.date %></td>
