Add the `referrer` to the API and journey
Adds this field to allow customers to specify the referring pension
provider for their appointment type.

--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -157,6 +157,9 @@
             {}, { class: 't-where-you-heard form-control' }
       %>
     </div>
+    <% if @appointment.due_diligence? %>
+      <%= f.text_field :referrer, autocomplete: 'off', class: 't-referrer', label: 'Pension Safeguarding Guidance referrer' %>
+    <% end %>
 
     <% if defined?(edit) && edit %>
       <%=
