--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -43,6 +43,7 @@
   <%= f.hidden_field :lloyds_signposted %>
   <%= f.hidden_field :bsl_video %>
   <%= f.hidden_field :schedule_type %>
+  <%= f.hidden_field :referrer %>
 
   <%= f.hidden_field :data_subject_name %>
   <%= f.hidden_field :data_subject_date_of_birth %>
