--- a/app/views/shared/email/_preparing_for_appointment.text.erb
+++ b/app/views/shared/email/_preparing_for_appointment.text.erb
@@ -2,19 +2,34 @@ Preparing for your appointment
 
 To make the most of your appointment it would be helpful if you know:
 
+<% if @appointment.due_diligence? %>
+* details of your current pension and provider
+* details of the pension scheme you are looking to transfer to
+* details of where the receiving pension scheme proposes to invest your money
+* any information you have from the current provider for the Red or Amber flags raised by them
+* details of your other pension arrangements you may have
+<% else %>
 * what type(s) of pension you have? -- ask your pension provider whether you have a defined contribution or a defined benefit pension if you are unsure
 * the value of your pension pot(s) -- check your pension paperwork or ask your provider
 * an estimate of your State Pension -- call the Future Pension Centre on 0800 731 0175 for a State Pension statement
 * an estimate of your State Pension -- call the Future Pension Centre on 0800 731 0175 or use the online service https://www.gov.uk/check-state-pension for a State Pension statement
 * if your pension pot contains any special features, eg a guaranteed annuity rate or a guaranteed pot value at a certain time -- ask your provider
+<% end %>
 
 Think about your financial circumstances in general and plans for retirement, eg:
 
+<% if @appointment.due_diligence? %>
+* sources of income like salary, state benefits, savings and investments
+* when are you likely to want to access the pension savings
+<% else %>
 * sources of income like salary, state benefits, savings and investments
 * debts and repayments you might have
 * when you want to stop working
 * if you want a fixed or flexible income in retirement
+<% end %>
 
+<% unless @appointment.due_diligence? %>
 Pension scams
 
 Pension scams are on the increase in the UK. A lifetime’s savings can be lost in moments. More information on scams can be found at https://www.moneyhelper.org.uk/scams
+<% end %>
