Further personalisation for emails
Includes provider, contact number and other personalisation for emails
dependent upon type of appointment.

--- a/app/views/appointment_mailer/confirmation.html.erb
+++ b/app/views/appointment_mailer/confirmation.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <%= p do %>
-  Thank you for booking a Pension Wise phone appointment.
+  Thank you for booking a <%= @appointment.type %> appointment.
 <% end %>
 
 <%= render 'shared/email/appointment_details' %>
