--- a/app/views/appointment_mailer/reminder.html.erb
+++ b/app/views/appointment_mailer/reminder.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <%= p do %>
-  This is a reminder that you have a Pension Wise phone appointment booked for:
+  This is a reminder that you have a <%= @appointment.type %> appointment booked for:
 <% end %>
 
 <%= render 'shared/email/appointment_details' %>
