--- a/app/views/appointment_mailer/cancelled.html.erb
+++ b/app/views/appointment_mailer/cancelled.html.erb
@@ -42,7 +42,7 @@
   <% if @appointment.cancelled_by_pension_wise? %>
     If we have not contacted you already, we will offer you a new date for your appointment within 1 working day.
   <% else %>
-    If you didn’t ask us to cancel your appointment or to book a new one, call <strong>0800 138 3944</strong>. Please don’t reply to this email.
+    If you didn’t ask us to cancel your appointment or to book a new one, call <strong><%= @appointment.telephone %></strong>. Please don’t reply to this email.
   <% end %>
 <% end %>
 
