--- a/app/views/appointment_mailer/missed.text.erb
+++ b/app/views/appointment_mailer/missed.text.erb
@@ -2,7 +2,7 @@ Missed appointment
 
 Dear <%= @appointment.first_name %>,
 
-Our records show that your Pension Wise telephone appointment was missed.
+Our records show that your <%= @appointment.type %> appointment was missed.
 Your appointment was scheduled for:
 
 Date:
@@ -17,6 +17,6 @@ Your phone number:
 Reference number:
 <%= @appointment.id %>
 
-To book another appointment, please call 0800 138 3944. Please don't reply to this email.
+To book another appointment, please call <%= @appointment.telephone %>. Please don't reply to this email.
 
 <%= render 'shared/email/money_helper' %>
