--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -12,6 +12,7 @@ $calendar-holiday-anchor-visited: $color-white;
 $calendar-holiday-background: darken($color-alto, 10%);
 $calendar-schedule-background: $color-xanadu;
 $calendar-bookable-slot-background: $color-madang;
+$calendar-bookable-slot-due-diligence-background: $color-plum;
 $calendar-loading-view-background: transparentize($color-white, .2);
 
 $guider-row-height: 120px;
@@ -261,7 +262,12 @@ $guider-row-height: 120px;
     background: $calendar-schedule-background;
   }
 
-  .fc-bgevent--bookable-slot {
+  .fc-bgevent--bookable-slot-due-diligence {
+    background: $calendar-bookable-slot-due-diligence-background;
+    z-index: 2;
+  }
+
+  .fc-bgevent--bookable-slot-pension-wise {
     background: $calendar-bookable-slot-background;
     z-index: 2;
   }
