--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -6,7 +6,7 @@
 
 <h4>
   <% if @appointment.due_diligence? %>
-    <span class="label label-default t-due-diligence-banner">Due Diligence</span>
+    <span class="label label-default t-due-diligence-banner">PSG</span>
   <% end %>
 
   <% if @appointment.lloyds_signposted? %>
