--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -3,7 +3,7 @@
 
 <% if @appointment.due_diligence? %>
 <h4>
-  <span class="label label-default t-due-diligence-banner">Due Diligence</span>
+  <span class="label label-default t-due-diligence-banner">PSG</span>
 </h4>
 <% end %>
 
