--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -176,7 +176,7 @@
             <% end %>
             <% if @appointment.due_diligence? %>
             <tr>
-              <td class="active"><b>Due diligence appointment?</b></td>
+              <td class="active"><b>PSG appointment?</b></td>
               <td>Yes</td>
             </tr>
             <% end %>
