Determine correct logo for appointment

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -183,7 +183,7 @@
             <table class="inner-container" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt; width: 100%">
                 <tr>
                     <td style="padding: 0;border-collapse: collapse; width: 50%;">
-                      <img src="https://tap.pensionwise.gov.uk/pw.jpg" alt="Pension Wise" style="outline: none;text-decoration: none;display: block;-ms-interpolation-mode: bicubic;">
+                      <img src="https://tap.pensionwise.gov.uk/<%= @appointment.logo_file %>" alt="<%= @appointment.provider %>" style="outline: none;text-decoration: none;display: block;-ms-interpolation-mode: bicubic;">
                     </td>
                     <td style="padding: 0;border-collapse: collapse; width: 50%;">
                       <img src="https://tap.pensionwise.gov.uk/hmg.gif" alt="HM Government" style="outline: none;text-decoration: none;display: block;-ms-interpolation-mode: bicubic;">
