Don't display address for non-PW appointments

--- a/app/views/shared/email/_money_helper.html.erb
+++ b/app/views/shared/email/_money_helper.html.erb
@@ -15,7 +15,7 @@
     where it is necessary to provide you with Pension Wise guidance. Full details
     of our privacy policy, including information on your rights in relation to the
     data we hold can be found at <a href="https://www.moneyhelper.org.uk/privacy">moneyhelper.org.uk/privacy</a>.
-    Alternatively, please write to Pension Wise, P.O. Box 10404, LE65 9EH.
+    <% if @appointment.pension_wise? %>Alternatively, please write to Pension Wise, P.O. Box 10404, LE65 9EH.<% end %>
   <% end %>
 <% else %>
   <%= p do %>
