--- a/app/views/shared/email/_money_helper.text.erb
+++ b/app/views/shared/email/_money_helper.text.erb
@@ -10,7 +10,7 @@ pensions guidance. Your data will be shared with our delivery partners only
 where it is necessary to provide you with Pension Wise guidance. Full details
 of our privacy policy, including information on your rights in relation to the
 data we hold can be found at https://www.moneyhelper.org.uk/privacy.
-Alternatively, please write to Pension Wise, P.O. Box 10404, LE65 9EH.
+<% if @appointment.pension_wise? %>Alternatively, please write to Pension Wise, P.O. Box 10404, LE65 9EH.<% end %>
 <% else %>
 Full details of our privacy policy, including information on your rights in
 relation to the data we hold can be found at https://www.moneyhelper.org.uk/privacy.
