Remove redundant pensions blurb

--- a/app/views/shared/email/_money_helper.html.erb
+++ b/app/views/shared/email/_money_helper.html.erb
@@ -11,10 +11,8 @@
 <% if defined?(full_detail) %>
   <%= p do %>
     MoneyHelper collects and stores personal data for the purpose of delivering
-    pensions guidance. Your data will be shared with our delivery partners only
-    where it is necessary to provide you with Pension Wise guidance. Full details
-    of our privacy policy, including information on your rights in relation to the
-    data we hold can be found at <a href="https://www.moneyhelper.org.uk/privacy">moneyhelper.org.uk/privacy</a>.
+    pensions guidance. Full details of our privacy policy, including
+    information on your rights in relation to the data we hold can be found at <a href="https://www.moneyhelper.org.uk/privacy">moneyhelper.org.uk/privacy</a>.
     <% if @appointment.pension_wise? %>Alternatively, please write to Pension Wise, P.O. Box 10404, LE65 9EH.<% end %>
   <% end %>
 <% else %>
