--- a/app/views/shared/email/_money_helper.text.erb
+++ b/app/views/shared/email/_money_helper.text.erb
@@ -6,10 +6,8 @@ found at https://www.moneyhelper.org.uk/about-us.
 
 <% if defined?(full_detail) %>
 MoneyHelper collects and stores personal data for the purpose of delivering
-pensions guidance. Your data will be shared with our delivery partners only
-where it is necessary to provide you with Pension Wise guidance. Full details
-of our privacy policy, including information on your rights in relation to the
-data we hold can be found at https://www.moneyhelper.org.uk/privacy.
+pensions guidance. Full details of our privacy policy, including information on
+your rights in relation to the data we hold can be found at https://www.moneyhelper.org.uk/privacy.
 <% if @appointment.pension_wise? %>Alternatively, please write to Pension Wise, P.O. Box 10404, LE65 9EH.<% end %>
 <% else %>
 Full details of our privacy policy, including information on your rights in
