--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -26,7 +26,7 @@
   <hr>
 
   <div class="row form-group">
-    <%= render 'schedule_form', form: f, rescheduling: false, schedule_type: schedule_type %>
+    <%= render 'schedule_form', form: f, rescheduling: false, schedule_type: @appointment.schedule_type %>
   </div>
 
   <div class="row form-group">
