Add mandatory labelling for referrer field

--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -174,7 +174,7 @@
     <% end %>
 
     <% if @appointment.due_diligence? %>
-      <%= f.text_field :referrer, autocomplete: 'off', class: 't-referrer', label: 'Pension Safeguarding Guidance referrer' %>
+      <%= f.text_field :referrer, autocomplete: 'off', class: 't-referrer', label: required_label('Pension Safeguarding Guidance referrer') %>
     <% end %>
 
     <% if defined?(edit) && edit %>
